plugins {
    id 'java'
    id 'org.springframework.boot' version '3.3.4'
    id 'io.spring.dependency-management' version '1.1.6'
}

group = 'com.hocsserver'
version = '0.0.1-SNAPSHOT'

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
    maven {
        url = uri("https://repo.spring.io/milestone")
    }
    maven {
        url = uri("https://repo.spring.io/snapshot")
    }
}

dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-web'
    compileOnly 'org.projectlombok:lombok'
    runtimeOnly 'com.mysql:mysql-connector-j'
    annotationProcessor 'org.projectlombok:lombok'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
    testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

    // Spring OAuth2 Client
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    // Jackson JSON
    implementation 'com.fasterxml.jackson.core:jackson-databind'

    // Git Clone (JGit)
    implementation 'org.eclipse.jgit:org.eclipse.jgit:5.13.0.202109080827-r'

    // Spring Security
    implementation 'org.springframework.boot:spring-boot-starter-security'

    // Thymeleaf (선택 사항)
    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    //analyze
    implementation("com.github.javaparser:javaparser-core:3.25.4")
    implementation("com.github.javaparser:javaparser-symbol-solver-core:3.25.4")
    implementation("org.yaml:snakeyaml:2.0")
//    spring ai
    implementation("org.springframework.ai:spring-ai-openai:1.0.0-M2")

    //for parse yaml
    implementation("com.fasterxml.jackson.core:jackson-databind:2.15.2")
    implementation("com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.15.2")
    implementation("org.yaml:snakeyaml:2.0")
    implementation("commons-io:commons-io:2.11.0")

    //json
    implementation("com.google.code.gson:gson")

    //aop
    implementation 'org.springframework.boot:spring-boot-starter-aop'

    //mongoDB
    implementation 'org.springframework.boot:spring-boot-starter-data-mongodb'

    implementation 'org.springframework.boot:spring-boot-starter-validation'


}

tasks.named('test') {
    useJUnitPlatform()
}

